--- a/src/main/resources/templates/create_project.html
+++ b/src/main/resources/templates/create_project.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/create_project.css">
     <link rel="stylesheet" href="/css/form-layout.css">
 
-    
+    <script src = "/src/create_project.js" defer></script>
 
     <title>Strona główna</title>
 </head>
@@ -84,36 +84,6 @@
 
                 <h1>Lista zadań</h1>
 
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
             </div>
 
             <form action="" class="form" name = "taskForm">
@@ -152,136 +122,12 @@
     <footer class="footer">
 
         <div class="footer-col1"><img src="/images/logotst.png" alt=""></div>
-        <div class="footer-col2">col2</div>
-        <div class="footer-col3">col3</div>
-        <div class="footer-col4">col4</div>
+        <div class="footer-col2"></div>
+        <div class="footer-col3"></div>
+        <div class="footer-col4"></div>
 
     </footer>
 
-    <script>
-
-        $(".chosen-select").chosen();
-        document.getElementById('tags_chosen').style.width = "";
-        document.getElementsByClassName('chosen-search-input')[0].setAttribute('value',"Wybierz tagi");
-        document.getElementsByClassName('chosen-search-input')[0].setAttribute('placeholder',"Wybierz tagi");
-
-        const tasks = [];
-
-        async function createProject(){
-
-            const form = document.forms["projectForm"];
-
-            const formData = new FormData(form);
-
-            const data = Object.fromEntries(formData.entries());
-
-            console.log(formData);
-
-            try {
-            const response = await fetch("http://localhost:8080/api/project/create" , {
-                method: 'POST',
-                body: formData
-            });
-
-            if (response.ok) {
-                const result = await response.text();
-                console.log(result);
-                document.getElementById("tasks-container").style.display = "grid";
-                document.getElementById("create-tasks-button").dataset.projectId = result;
-                document.getElementById("form-container").style.display = "none";
-
-            } else {
-                console.log("Błąd odpowiedzi serwera ", (await response).status);
-            }
-        } catch (error) {
-            console.log(error);
-        }
-
-        }
-
-        function addTasksToList() {
-
-            const form = document.forms["taskForm"];
-
-            const formData = new FormData(form);
-
-            const data = Object.fromEntries(formData.entries());
-
-            data.projectId = document.getElementById("create-tasks-button").dataset['projectId'];
-
-            console.log(data);
-
-            tasks.push(data);
-
-            const root = document.getElementById("tasks");
-
-            const taskDiv = document.createElement("div");
-            taskDiv.classList.add("task");
-
-            const taskHeader = document.createElement("h2");
-            taskHeader.classList.add("task-tittle");
-            taskHeader.innerText = data["task-title"];
-
-            const taskDesc = document.createElement("p");
-            taskDesc.classList.add("task-desc");
-            taskDesc.innerText = data["task-desc"];
-
-            const taskPriority = document.createElement("span");
-            taskPriority.classList.add("priority");
-            taskPriority.innerText = "Priorytet - " + data["priority"] + ", termin - " + data["deadline"];
-
-            taskDiv.appendChild(taskHeader);
-            taskDiv.appendChild(taskDesc);
-            taskDiv.appendChild(taskPriority);
-            root.append(taskDiv);
-
-
-            console.log(tasks);
-        }
-
-        async function saveTasks() {
-
-
-            try {
-
-                const response = await fetch("http://localhost:8080/api/task/save", {
-                    method: 'POST',
-                    headers: {
-                        'Content-type': 'application/json'
-                    },
-                    body: JSON.stringify(tasks)
-                });
-
-                if (response.ok) {
-                    console.log("Udało sie");
-                } else {
-                    console.log('Blad serwera: ', await response.text());
-                }
-
-            } catch (error) {
-                console.error(error);
-            }
-        }
-
-        async function getId(){
-        try {
-            const response = await fetch("http://localhost:8080/api/login/getId", {
-                method: "GET",
-                'Content-Type': 'application/json',
-            });
-
-            if (response.ok){
-                const result = await response.text();
-                console.log(result);
-            } else {
-                console.log("cos nie poszlo");
-            }
-        } catch (error){
-            console.log(error)
-        }
-    }
-
-    </script>
     
 </body>
 </html>
