--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/css/main-layout.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/form-layout.css">
+
+    <script src="/src/login.js" defer></script>
+
     <title>Strona główna</title>
 </head>
 <body>
@@ -67,45 +70,6 @@
         <div class="footer-col4"></div>
 
     </footer>
-
-<script>
-
-    async function logIn() {
-
-        const form = document.forms["loginForm"];
-
-        const formData = new FormData(form);
-
-        const data = Object.fromEntries(formData.entries());
-
-
-        try {
-            const response = await fetch("http://localhost:8080/api/login/auth" , {
-                method: 'POST',
-                headers: {
-                    'Content-Type' : 'application/json',
-                } ,
-                body: JSON.stringify(data),
-            });
-
-            if (response.ok) {
-                const result = await response.text();
-                console.log(result);
-                if (result === "VOLUNTEER") {
-                    location.href = "http://localhost:8080/volunteer/projects";
-                } else {
-                    location.href = "http://localhost:8080/organisation/projects"
-                }
-            } else {
-                console.log("Błąd odpowiedzi serwera ", (await response).status);
-            }
-        } catch (error) {
-            console.log(error);
-        }
-
-    }
-
-</script>
     
 </body>
 </html>
